--- a/openvpn/server.conf
+++ b/openvpn/server.conf
@@ -25,6 +25,21 @@ user nobody
 group nogroup
 comp-lzo no
 data-ciphers AES-256-GCM:AES-128-GCM:CHACHA20-POLY1305
+auth SHA256
+tls-version-min 1.2
 
 # Route configurations
 route 192.168.254.0 255
+push "route 192.168.68.0 255.255.255.0"
+push "route-gateway dhcp"
+push "redirect-gateway def1"
+
+# DNS forwarding
+push "dhcp-option DNS 8.8.8.8"
+push "dhcp-option DNS 8.8.4.4"
+
+# DDNS Public Name
+remote j4family.tplinksdns.com 1194
+
+# Allow client-to-client communication
+client-to-client
