--- a/openvpn/server.conf
+++ b/openvpn/server.conf
@@ -1,5 +1,8 @@
 server 192.168.255.0 255.255.255.0
 verb 3
+topology subnet
+data-ciphers AES-256-GCM:AES-128-GCM:CHACHA20-POLY1305
+data-ciphers-fallback BF-CBC
 
 # Paths to keys and certificates
 key /etc/openvpn/server.key
